--- a/css/corporation.css
+++ b/css/corporation.css
@@ -10,7 +10,7 @@
 }
 
 .corporations-container > div {
-    width: 150px;
+    width: 120px;
     position: relative;
     cursor: pointer;
     user-select: none;
@@ -32,7 +32,7 @@
 
 .corporations-container > div > a > span {
     background-color: white;
-    padding: 10px;
+    padding: 5px;
     border-radius: 3px;
 }
 
@@ -41,8 +41,8 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.474);
     top: 0px;
     left: 0px;
