--- a/css/generalStyles.css
+++ b/css/generalStyles.css
@@ -3,6 +3,7 @@
 :root {
     --black: #131313;
     --gray: #5c5c5c;
+    --light-gray: #b1b1b1;
     --border: #e8e8e8;
 
     --primary: rgb(235, 74, 74);
