--- a/components/MainMenu/MainMenu.css
+++ b/components/MainMenu/MainMenu.css
@@ -11,15 +11,17 @@
     position: fixed;
     top: 0;
     left: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .active-mobile-menu__wrapper {
-    max-width: 70%;
+    max-width: 500px;
     max-height: 100vh;
     border-right: 1px solid var(--border);
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: white;
+    overflow-y: auto;
 }
 
 .main-menu__mobile-hamburger {
@@ -54,12 +56,12 @@
 .main-menu__modules-wrapper {
     display: flex;
     flex-direction: column;
-    padding-top: 20px;
+    margin-top: -20px;
 
     visibility: hidden;
     opacity: 0;
 
-    transition: visibility 0s, opacity 0.5s 0.2s linear;
+    transition: visibility 0s, opacity 0.2s 0.4s linear;
 }
 
 .active-mobile-menu__modules-wrapper {
@@ -75,7 +77,66 @@
     color: var(--gray);
 }
 
+.main-menu__modules-wrapper > div.main-menu__modules-static {
+    font-size: 14px;
+    padding: 10px 40px;
+}
+
+.main-menu__modules-wrapper > hr {
+    width: 90%;
+    border: none;
+    border-bottom: 1px solid var(--border);
+    margin-bottom: 20px;
+}
+
 .main-menu__modules-wrapper > div > i {
     color: var(--light-gray);
     margin-right: 10px;
+}
+
+.main-menu__modules-wrapper > div.main-menu__modules-static > i {
+    color: var(--primary);
+    margin-right: 10px;
+}
+
+.main-menu__corporation-picture {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+}
+
+.main-menu__modules-wrapper > div.main-menu__corporation-picture {
+    padding-top: 0px;
+}
+
+.main-menu__corporation-picture > img {
+    height: 100%;
+    border-radius: 50%;
+    outline: 5px solid white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.main-menu__sub-modules {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin: 20px 0px 0px 20px;
+    padding: 20px 0px 20px 25px;
+    font-size: 14px;
+    border-left: 5px solid var(--border);
+    transition: all 0.5s 0.5s linear !important;
+}
+
+.main-menu__module {
+    max-height: 60px;
+    transition: all 0.5s linear !important;
+}
+
+.main-menu__module.selected-module {
+    max-height: 500px;
+}
+
+.selected-module > i {
+    color: var(--primary) !important;
 }
