--- a/components/Items/Items.css
+++ b/components/Items/Items.css
@@ -1,8 +1,7 @@
 .items-display {
     display: flex;
     justify-content: stretch;
-    gap: 10px;
-    padding: 0 20px 20px 20px;
+    padding: 0 10px 0 10px;
 }
 
 .items-display > span {
@@ -14,7 +13,12 @@
     justify-content: center;
     align-items: center;
     color: var(--gray);
-    border-radius: 5px;
+    border-radius: 0 5px 5px 0;
+}
+
+.items-display > input {
+    border-radius: 5px 0 0 5px;
+    border-right: none;
 }
 
 .items__container {
