--- a/components/HeaderLocation/HeaderLocation.css
+++ b/components/HeaderLocation/HeaderLocation.css
@@ -1,8 +1,11 @@
 .header-location {
-    height: 70px;
-    padding-left: 70px;
+    height: 60px;
     line-height: 63px;
     user-select: none;
+    position: fixed;
+    background-color: white;
+    width: calc(100% - 70px);
+    margin-left: 70px;
 }
 
 .header-location > span:first-child {
