--- a/components/Items/Items.css
+++ b/components/Items/Items.css
@@ -18,6 +18,7 @@
 
 .items-display > input {
     border-radius: 5px 0 0 5px;
+    border: 1px solid var(--secondary);
     border-right: none;
 }
 
