--- a/components/MainMenu/MainMenu.css
+++ b/components/MainMenu/MainMenu.css
@@ -1,7 +1,7 @@
 .main-menu__wrapper {
     width: 100%;
     height: 100vh;
-    max-height: 70px;
+    max-height: 60px;
     max-width: 70px;
     background-color: transparent;
     padding: 15px;
@@ -11,8 +11,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
+    background-color: white;
+    z-index: 99;
 }
 
 .active-mobile-menu__wrapper {
