create Pagination global component

--- a/components/Item/Item.css
+++ b/components/Item/Item.css
@@ -2,6 +2,7 @@
     border-radius: 5px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     max-width: 400px;
+    width: 100%;
 }
 
 .item__main_container {
