--- a/components/Items/Items.css
+++ b/components/Items/Items.css
@@ -25,6 +25,7 @@
 .items__container {
     padding: 10px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 10px;
+    justify-content: center;
 }
