--- a/components/global/Pagination/Pagination.css
+++ b/components/global/Pagination/Pagination.css
@@ -1,7 +1,7 @@
 .pagination {
     display: flex;
     gap: 10px;
-    padding: 10px 0 0 0;
+    padding: 20px 0 10px 0;
     justify-content: center;
 }
 
