Improve style for Clients component

--- a/components/Cart/Cart.css
+++ b/components/Cart/Cart.css
@@ -32,3 +32,12 @@
     bottom: -5px;
     right: 0;
 }
+
+.cart__list {
+    position: fixed;
+    top: 60px;
+    right: 7px;
+    z-index: 100;
+    background-color: white;
+    padding: 20px;
+}
