--- a/css/generalStyles.css
+++ b/css/generalStyles.css
@@ -1,69 +1,175 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 :root {
-    --black: #131313;
-    --gray: #5c5c5c;
-    --light-gray: #b1b1b1;
-    --border: #b1b1b1;
+  --black: #131313;
+  --gray: #5c5c5c;
+  --light-gray: #b1b1b1;
+  --border: #b1b1b1;
 
-    --primary: rgb(235, 74, 74);
-    --secondary: #e8e8e8;
+  --primary: rgb(235, 74, 74);
+  --secondary: #e8e8e8;
 
-    --error-background: rgb(239, 207, 207);
-    --error: rgb(235, 74, 74);
+  --error-background: rgb(239, 207, 207);
+  --error: rgb(235, 74, 74);
 
-   
+
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    color: var(--black);
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: var(--black);
+  font-family: 'Roboto', sans-serif;
 }
 
 input[type="text"],
 input[type="password"] {
-    width: 100%;
-    line-height: 45px;
-    padding: 0 15px;
-    border: 1px solid var(--border);
-    border-radius: 3px;
-    background-color: transparent;
-    color: white;
+  width: 100%;
+  line-height: 45px;
+  padding: 0 15px;
+  border: 1px solid var(--border);
+  border-radius: 3px;
+  background-color: transparent;
+  color: white;
 }
 
 button,
 input[type="submit"],
 input[type="reset"] {
-    width: 100%;
-    line-height: 45px;
-    padding: 0 15px;
-    border: none;
-    border-radius: 3px;
-    background-color: var(--primary);
-    color: white;
+  width: 100%;
+  line-height: 45px;
+  padding: 0 15px;
+  border: none;
+  border-radius: 3px;
+  background-color: var(--primary);
+  color: white;
 }
 
 button.secondary,
 input[type="submit"].secondary,
 input[type="reset"].secondary {
-    background-color: var(--secondary);
-    color: var(--black);
+  background-color: var(--secondary);
+  color: var(--black);
 }
 
 button a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 button.secondary a {
-    color: var(--black);
+  color: var(--black);
+}
+
+.bold {
+  font-weight: 600;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.list-display {
+  display: flex;
+  justify-content: stretch;
+  padding: 0 10px 0 10px;
+}
+
+.list-display>span {
+  display: block;
+  width: 60px;
+  height: 47px;
+  background-color: var(--secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--gray);
+  border-radius: 0 5px 5px 0;
+}
+
+.list-display>input {
+  border-radius: 5px 0 0 5px;
+  border: 1px solid var(--secondary);
+  border-right: none;
+  color: var(--black);
+  width: 100%;
+  padding-left: 15px;
+}
+
+.list__container {
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.card {
+  border-radius: 5px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  max-width: 400px;
+  width: 100%;
+}
+
+.card__main_container {
+  width: 100%;
+  padding: 0 15px;
+}
+
+.card__picture {
+  height: 200px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.card__picture--small {
+  height: 100px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.card_picture>img {
+  height: 100%;
+}
+
+.card__info {
+  padding: 20px 0;
+}
+
+.card__label {
+  font-size: 14px;
+  color: #666;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.card__title {
+  font-size: 14px;
+  color: #666;
+  text-transform: capitalize;
+}
+
+.card__code {
+  font-size: 14px;
+  color: var(--primary);
+  text-transform: uppercase;
+}
+
+.card__model {
+  font-size: 14px;
+  color: var(--border);
+  text-transform: capitalize;
+}
+
+.card__line {
+  padding: 2px 0;
 }
