Add darker shadow to cart list container

--- a/components/Cart/Cart.css
+++ b/components/Cart/Cart.css
@@ -40,6 +40,7 @@
     z-index: 100;
     background-color: white;
     padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .cart__items {
