--- a/components/Quotes/Quote/Quote.css
+++ b/components/Quotes/Quote/Quote.css
@@ -40,3 +40,21 @@
   justify-content: center;
   padding-left: 10px;
 }
+
+.quote-line {
+  font-size: 12px;
+  color: var(--black);
+  padding: 5px 20px 10px 0;
+  display: flex;
+}
+
+.quote-line > label {
+  font-weight: 600;
+  display: block;
+  margin-right: 5px;
+}
+
+.quote-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
