Add whatsapp link to client

--- a/components/Clients/Client/Client.css
+++ b/components/Clients/Client/Client.css
@@ -3,3 +3,49 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.client__header .card__line {
+  padding: 0;
+}
+
+.client__header .card__line .card__title,
+.client__header .card__line .card__label {
+  font-size: 12px;
+}
+
+.client__info .card__label,
+.client__info .card__title {
+  font-size: 11px;
+}
+
+.client__info .card__title a,
+.client__header .card__line .card__title a {
+  text-decoration: none;
+  color: var(--info);
+}
+
+.client_menu {
+  display: flex;
+  gap: 10px;
+  color: var(--gray);
+  font-size: 18px;
+  margin: 5px 0 15px 0;
+}
+
+.client_menu > div {
+  cursor: pointer;
+  user-select: none;
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--secondary);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.client_menu > div > span {
+  padding-top: 2px;
+  font-size: 9px;
+}
