Create ReassignClient component

--- a/css/generalStyles.css
+++ b/css/generalStyles.css
@@ -310,3 +310,11 @@ tfoot tr td:first-child {
 .label.default {
   background-color: var(--default);
 }
+
+.margin-top {
+  margin-top: 10px;
+}
+
+.vs__search {
+  min-height:34px;
+}
