--- a/css/forms.css
+++ b/css/forms.css
@@ -97,6 +97,7 @@
   font-size: 12px;
   font-weight: 600;
   background-color: white;
+  position: relative;
 }
 
 .form-line .custom-file-upload input[type="file"] {
