--- a/css/forms.css
+++ b/css/forms.css
@@ -3,20 +3,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 0 20px;
+}
+
+.modal__body > div > .form-container {
+  padding: 0 10px;
 }
 
 .form-container > form {
   width: 100%;
   max-width: 800px;
-  padding: 10px 30px;
   background-color: white;
-  border-radius: 5px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding-bottom: 30px;
 }
 
 .form-container h3 {
