--- a/components/Orders/Order/Order.css
+++ b/components/Orders/Order/Order.css
@@ -9,24 +9,19 @@
   cursor: pointer;
 }
 
-/*.order__container > div {
-  display: flex;
-  align-items: center;
-}*/
-
 .order__id {
   width: 30px;
   color: var(--primary);
 }
 
 .order__description {
-  width: calc(100% - 200px);
+  width: calc(100% - 220px);
   overflow: hidden;
 }
 
 .order__amounts {
-  width: 100px;
-  text-align: left;
+  width: 120px;
+  text-align: right;
   display: flex;
   flex-direction: column;
 }
@@ -38,7 +33,7 @@
 .order__status {
   width: 70px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 }
 
