Create order status change functionality

--- a/components/Orders/Order/Order.css
+++ b/components/Orders/Order/Order.css
@@ -60,3 +60,11 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+/*.fa-backward {
+  color: var(--danger);
+}
+
+.fa-forward {
+  color: var(--ok);
+}*/
